k8s/apps/common/memos/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: memos
spec:
  hostnames:
    - memos.${MAIN_DOMAIN}
  parentRefs:
    - name: external
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: "memos-grpc"
          port: 5231
      matches:
        - headers:
            - type: Exact
              name: Content-Type
              value: "application/grpc-web+proto"
    - backendRefs:
        - name: memos-app
          port: 5230
          weight: 1
