k8s/apps/common/memos/app/route.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &app memos
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: 文章
    gethomepage.dev/name: Memos
    gethomepage.dev/icon: memos.png
    gethomepage.dev/description: ""
    gethomepage.dev/app: *app
spec:
  hostnames:
    - memos.${MAIN_DOMAIN}
  parentRefs:
    - name: envoy-external
      namespace: network
  rules:
    # - backendRefs:
    #     - name: "memos-grpc"
    #       namespace: default
    #       port: 5231
    #   matches:
    #     - headers:
    #         - type: Exact
    #           name: Content-Type
    #           value: "application/grpc-web+proto"
    - backendRefs:
        - name: memos-app
          namespace: default
          port: 5230
          weight: 1

---
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: memos-grpc
  namespace: memos
spec:
  hostnames:
    - memos.${MAIN_DOMAIN}
  parentRefs:
    - name: envoy-external
      namespace: network
  rules:
    - matches:
        - method:
            service: memos.api.v1.ActivityService
        - method:
            service: memos.api.v1.AuthService
        - method:
            service: memos.api.v1.IdentityProviderService
        - method:
            service: memos.api.v1.InboxService
        - method:
            service: memos.api.v1.MarkdownService
        - method:
            service: memos.api.v1.MemoService
        - method:
            service: memos.api.v1.ResourceService
        - method:
            service: memos.api.v1.UserService
        - method:
            service: memos.api.v1.WebhookService
        - method:
            service: memos.api.v1.WorkspaceService
        - method:
            service: memos.api.v1.WorkspaceSettingService
        - method:
            service: memos.api.v1.InstanceService
        - method:
            service: memos.api.v1.ShortcutService
        - method:
            service: memos.api.v1.AttachmentService
      backendRefs:
        - name: memos-grpc
          port: 5231
